{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 282,
  "lineage": "ac8d6dc6-9d69-ce4c-9989-e544362735bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:internet-gateway/igw-041151a47c05feee7",
            "id": "igw-041151a47c05feee7",
            "owner_id": "767398072397",
            "vpc_id": "vpc-0c96baca8def97ca8"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041151a47c05feee7",
            "id": "r-rtb-0863f21047c60b0261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0863f21047c60b026",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_example_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:security-group/sg-090e05e840e398ed6",
            "description": "Allow TLS inbound traffic on port 80 (http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e05e840e398ed6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "security_group_example_app",
            "name_prefix": "",
            "owner_id": "767398072397",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c96baca8def97ca8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-089a79062223a3bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089a79062223a3bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c96baca8def97ca8"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-0efbcefc66365a5d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efbcefc66365a5d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c96baca8def97ca8"
          },
          "dependencies": [
            "aws_vpc.vpc_example_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_example_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:vpc/vpc-0c96baca8def97ca8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb3fb4032f58869d",
            "default_route_table_id": "rtb-0863f21047c60b026",
            "default_security_group_id": "sg-078555bb5451089bc",
            "dhcp_options_id": "dopt-0e9b9f415d1dbe52c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c96baca8def97ca8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0863f21047c60b026",
            "owner_id": "767398072397"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:security-group/sg-0b026423f921d69f6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b026423f921d69f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aea9a2a01121f58c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pairing-eks-20240430-cluster-2024043017181358370000000c",
            "name_prefix": "pairing-eks-20240430-cluster-",
            "owner_id": "767398072397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pairing-eks-20240430-cluster"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:security-group/sg-0aea9a2a01121f58c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aea9a2a01121f58c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-061980b31f2026259"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b026423f921d69f6"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "pairing-eks-20240430-node-2024043017181358930000000d",
            "name_prefix": "pairing-eks-20240430-node-",
            "owner_id": "767398072397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pairing-eks-20240430-node",
              "kubernetes.io/cluster/pairing-eks-20240430": "owned"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-node",
              "kubernetes.io/cluster/pairing-eks-20240430": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3897230982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b026423f921d69f6",
            "security_group_rule_id": "sgr-00be6c9a46be0f9ac",
            "self": false,
            "source_security_group_id": "sg-0aea9a2a01121f58c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2531164940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-06913180eb3ea1c17",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-728531780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-0455dea9e58ee61a2",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3500523128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-0c17512b8885566b2",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-434625006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-0145272255a0d7d7d",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-180086223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-05da979c0655a1217",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1847252484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-09bad176762fdf32f",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1079551953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-02511c964bcb653f4",
            "self": false,
            "source_security_group_id": "sg-0b026423f921d69f6",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3785460862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-034bc43a772212345",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-727510537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-0c8150ef73fa02bc9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2399358438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0aea9a2a01121f58c",
            "security_group_rule_id": "sgr-0c26996068cdf72c3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:network-acl/acl-046d61b70f5f44b2b",
            "default_network_acl_id": "acl-046d61b70f5f44b2b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-046d61b70f5f44b2b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398072397",
            "subnet_ids": [
              "subnet-004e3e19a9a83669f",
              "subnet-02e6698045e5983f3",
              "subnet-03dc5d434b2828364",
              "subnet-043e73d1bb02a246a",
              "subnet-08f6500f3d73083b0",
              "subnet-0e5442668e1d4fafa"
            ],
            "tags": {
              "Name": "pairing-eks-20240430-default"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-default"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:route-table/rtb-087b7a066bf584c01",
            "default_route_table_id": "rtb-087b7a066bf584c01",
            "id": "rtb-087b7a066bf584c01",
            "owner_id": "767398072397",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pairing-eks-20240430-default"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:security-group/sg-00632cf5593369c79",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00632cf5593369c79",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398072397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pairing-eks-20240430-default"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-default"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbddcb503fc678c8",
            "arn": "arn:aws:ec2:us-west-2:767398072397:elastic-ip/eipalloc-0bbddcb503fc678c8",
            "association_id": "eipassoc-0f0487d23fcb825e9",
            "domain": "vpc",
            "id": "eipalloc-0bbddcb503fc678c8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0136816ea04f66b4f",
            "private_dns": "ip-10-0-4-94.us-west-2.compute.internal",
            "private_ip": "10.0.4.94",
            "public_dns": "ec2-54-212-140-157.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.140.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pairing-eks-20240430-us-west-2a"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:internet-gateway/igw-088b17d4e1567285b",
            "id": "igw-088b17d4e1567285b",
            "owner_id": "767398072397",
            "tags": {
              "Name": "pairing-eks-20240430"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbddcb503fc678c8",
            "association_id": "eipassoc-0f0487d23fcb825e9",
            "connectivity_type": "public",
            "id": "nat-0f8add0565477d233",
            "network_interface_id": "eni-0136816ea04f66b4f",
            "private_ip": "10.0.4.94",
            "public_ip": "54.212.140.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043e73d1bb02a246a",
            "tags": {
              "Name": "pairing-eks-20240430-us-west-2a"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ec8600ff55f872f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f8add0565477d233",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ec8600ff55f872f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-088b17d4e1567285b",
            "id": "r-rtb-03fd77a3685ff4b301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03fd77a3685ff4b30",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:route-table/rtb-02ec8600ff55f872f",
            "id": "rtb-02ec8600ff55f872f",
            "owner_id": "767398072397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8add0565477d233",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pairing-eks-20240430-private"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:route-table/rtb-03fd77a3685ff4b30",
            "id": "rtb-03fd77a3685ff4b30",
            "owner_id": "767398072397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088b17d4e1567285b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pairing-eks-20240430-public"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec4889514904a97",
            "route_table_id": "rtb-02ec8600ff55f872f",
            "subnet_id": "subnet-0e5442668e1d4fafa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bf6eeb225817ed7",
            "route_table_id": "rtb-02ec8600ff55f872f",
            "subnet_id": "subnet-004e3e19a9a83669f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e9f6ee1dc5c59e3",
            "route_table_id": "rtb-02ec8600ff55f872f",
            "subnet_id": "subnet-03dc5d434b2828364"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2191649508e765b",
            "route_table_id": "rtb-03fd77a3685ff4b30",
            "subnet_id": "subnet-043e73d1bb02a246a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da60832eca33e4d",
            "route_table_id": "rtb-03fd77a3685ff4b30",
            "subnet_id": "subnet-08f6500f3d73083b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055c263b6eb18c210",
            "route_table_id": "rtb-03fd77a3685ff4b30",
            "subnet_id": "subnet-02e6698045e5983f3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-0e5442668e1d4fafa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5442668e1d4fafa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-private-us-west-2a",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-private-us-west-2a",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-004e3e19a9a83669f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004e3e19a9a83669f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-private-us-west-2b",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-private-us-west-2b",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-03dc5d434b2828364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc5d434b2828364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-private-us-west-2c",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-private-us-west-2c",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-043e73d1bb02a246a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e73d1bb02a246a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-public-us-west-2a",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-public-us-west-2a",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-08f6500f3d73083b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6500f3d73083b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-public-us-west-2b",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-public-us-west-2b",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:subnet/subnet-02e6698045e5983f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e6698045e5983f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398072397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pairing-eks-20240430-public-us-west-2c",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430-public-us-west-2c",
              "kubernetes.io/cluster/pairing-eks-20240430": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0042f09c860f658a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398072397:vpc/vpc-0042f09c860f658a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046d61b70f5f44b2b",
            "default_route_table_id": "rtb-087b7a066bf584c01",
            "default_security_group_id": "sg-00632cf5593369c79",
            "dhcp_options_id": "dopt-0e9b9f415d1dbe52c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0042f09c860f658a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087b7a066bf584c01",
            "owner_id": "767398072397",
            "tags": {
              "Name": "pairing-eks-20240430"
            },
            "tags_all": {
              "Name": "pairing-eks-20240430"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}